# friday-vlm

./: .dockerignore  .gitignore  Dockerfile  constraints.txt  image_encode_test.py  llm_test.py  main.py  notes.txt  prev.py  pyproject.toml  requirements.txt  run.sh  setup.sh
config/: finetune.json  pretrain.json  test.json
friday/: __init__.py  constants.py  conversation.py  dataset.py
friday/data/: __init__.py  collator.py  finetuning.py  pretraining.py
friday/model/: __init__.py  friday_arch.py
friday/model/language_model/phi4/: modeling_phi3.py  sample_finetune.py
friday/model/vision_adapter/: mlp_adapter.py
friday/model/vision_encoder/: siglip_encoder.py
friday/model/vision_tower/: __init__.py  fast_vit_encoder.py  siglip_encoder.py
friday/train/: config.py  data.py  friday_trainer.py  model_factory.py  sampling.py  train.py
friday/train/config/: pretrain.json
friday/train/data/: finetuning.py  pretraining.py
friday/util/: __init__.py  constants.py  data_utils.py  mm_utils.py  util.py
friday/util/s2wrapper/: core.py
model/: friday_arch.py
model/language_model/: friday_phi.py
model/language_model/phi4/: __init__.py  modeling_phi3.py
model/mm_adapter/: config.json
model/multi_modal_projector/: __init__.py  mlp_adapter.py
model/vision_encoder/: __init__.py  siglip_encoder.py
scripts/: eval_model.py  merge.py  quant_8.py  test.py
scripts/train/: finetune_full.sh  finetune_lora.sh  pretrain.sh
tests/: eval_adapter.py  eval_model.py  eval_token_length_distribution.py  run_pretrain.py  test_build_model.py  test_configuration_and_registry.py  test_data_pipeline.py  test_device_and_dtype.py  test_finetuning_data_pipeline.py  test_forward_pass.py  test_friday_model_utilities.py  test_generation.py  test_input_construction.py  test_length_grouping.py  test_misc.py  test_mlp_adapter.py  test_overfit.py  test_pretraining_data_pipeline.py  test_vision_towers.py  update_dataset.py  util.py
tests/assets/: data.json  model.json
util/: __init__.py  util.py
