[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "friday-vlm"              #  PyPI name
version = "0.1.0"
description = "Friday – a vision-language model based on Phi-4-mini"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"

# -------- runtime deps only --------
dependencies = [
  "torch>=2.2.0",                    # leave CUDA selection to users
  "transformers>=4.40.0",
  "bitsandbytes>=0.42.1 ; platform_system=='Linux' and platform_machine=='x86_64'",
  "sentencepiece>=0.2.0",
  "Pillow>=10.0",
  # any others strictly required for INFERENCE
]


[project.urls]
Homepage   = "https://github.com/krohling/friday-vlm"
Issues     = "https://github.com/krohling/friday-vlm/issues"

[tool.setuptools.package-data]
"friday" = ["*.json", "*.txt", "*.yaml"]   # if you embed config files

[tool.setuptools.packages.find]
where = ["."]
include = ["friday*"]          # include main package
exclude = ["tests*", "datasets*", "scripts*"]  # drop bulky dirs
